--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                 category: 'laptops',
                 price: '3,499 $',
                 description: 'شاشة 15.6 بوصة، معالج i7، 16GB RAM، 512GB SSD',
-                image: 'https://via.placeholder.com/300x200'
+                image: 'https://images.unsplash.com/photo-1585771724684-38269d6639fd?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60'
             },
             {
                 id: 2,
@@ -475,7 +475,7 @@
                 category: 'ssds',
                 price: '499 $',
                 description: 'سعة 1 تيرابايت، سرعة قراءة 3500MB/s، ضمان 5 سنوات',
-                image: 'https://via.placeholder.com/300x200'
+                image: 'https://images.unsplash.com/photo-1585771724684-38269d6639fd?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60'
             },
             {
                 id: 3,
@@ -483,7 +483,7 @@
                 category: 'batteries',
                 price: '249 $',
                 description: 'بطارية أصلية لسلسلة HP Pavilion، ضمان سنة',
-                image: 'https://via.placeholder.com/300x200'
+                image: 'https://images.unsplash.com/photo-1593642634524-b40b5baae6bb?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60'
             },
             {
                 id: 4,
@@ -491,7 +491,7 @@
                 category: 'keyboards',
                 price: '399 $',
                 description: 'كيبورد أصلية لماك بوك برو، إضاءة خلفية',
-                image: 'https://via.placeholder.com/300x200'
+                image: 'https://images.unsplash.com/photo-1585771724684-38269d6639fd?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60'
             },
             {
                 id: 5,
@@ -499,7 +499,7 @@
                 category: 'chargers',
                 price: '149 $',
                 description: 'شاحن أصلي للينوفو، 65 واط، مع كابل USB-C',
-                image: 'https://via.placeholder.com/300x200'
+                image: 'https://images.unsplash.com/photo-1593642634524-b40b5baae6bb?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60'
             },
             {
                 id: 6,
@@ -507,7 +507,7 @@
                 category: 'laptops',
                 price: '4,199 $',
                 description: 'شاشة 15.6 بوصة 144Hz، معالج Ryzen 7، 16GB RAM، 1TB SSD',
-                image: 'https://via.placeholder.com/300x200'
+                image: 'https://images.unsplash.com/photo-1593642632823-8f785ba67e45?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60'
             }
         ];
 
